--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -196,6 +196,24 @@
             </div>
           </div>
         </article>
+
+                 <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Story Bingo 1</h3>
+              <p>First, the teacher should choose a story from the Outreach360 Library for students to read. Use the board afterward as an <strong>individual post-reading reflection</strong> or as a <strong>group challenge or class competition</strong>. Each time the page loads, it generates a unique, randomized board so students get their own version. Great for reading comprehension, story elements, and interactive analysis.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/bingo-icon.png?raw=true"
+                  alt="Story Bingo 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/story-bingo1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
        
         <article class="card">
           <div class="body">
@@ -877,24 +895,24 @@
           </div>
         </article>
 
-
-                <article class="card">
+                                 <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Story Bingo 1</h3>
-              <p>First, the teacher should choose a story from the Outreach360 Library for students to read. Use the board afterward as an <strong>individual post-reading reflection</strong> or as a <strong>group challenge or class competition</strong>. Each time the page loads, it generates a unique, randomized board so students get their own version. Great for reading comprehension, story elements, and interactive analysis.</p>
+              <h3>Lyric Gaps</h3>
+              <p>Play an appropriate song and show lyrics with some blanks; students listen and fill the missing words. Twist: blank only verbs, adjectives, words with a target sound, etc. Great for vocabulary and careful listening.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/bingo-icon.png?raw=true"
-                  alt="Story Bingo 1 icon"
+                  src="https://github.com/Outreach360-Inc/games/blob/main/lyric-gaps-icon.png?raw=true"
+                  alt="Lyric Gaps icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="http://outreach360-inc.github.io/games/story-bingo1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+              <p style="color: #ff6729;" align="center"><strong>YOU WILL NEED TO CREATE YOUR OWN MATERIALS</strong></p>
             </div>
           </div>
         </article>
+
 
       <article class="card">
           <div class="body">
@@ -1561,6 +1579,7 @@
 
 </body>
 </html>
+
 
 
 
